test/cases/compile_errors/non-const_expression_in_struct_literal_outside_function.zig
const Foo = struct {
    x: i32,
};
const a = Foo{ .x = get_it() };
extern fn get_it() i32;

export fn entry() usize {
    return @sizeOf(@TypeOf(a));
}

// error
// backend=stage2
// target=native
//
// :4:27: error: comptime call of extern function
